@@ -1,3 +1,8 @@
+2004-12-29  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* unistd.c: Null-terminate the string returned by readlink(2).  This works
+	  around a marshaler "issue".
+
 2004-12-28  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* Makefile.am: Add GLIB_LIBS to the LIBS line, since we require linking
